[tool.poetry]
name = "hello-world-agent"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    { include = "hello_world_agent", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydantic = "^2.6.1"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
