[project]
name = "hello_world_agent"
version = "0.1.0"
description = "A simple hello world agent for naptha node"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "naptha-sdk",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hello_world_agent*"]

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
